# Snake

./: .dockerignore  .gitignore  Cargo.toml  README.md  api.Dockerfile  api.py  api.py.save  apy.py  available_games.json  build_and_deploy.sh  config.json  dev.api.Dockerfile  docker-compose.yml  roba.sql  schema.sql  snake.Dockerfile
API/: Cargo.toml
render_templates/: table.html
src/: lib.rs  main.rs  main.rs.save  scores.rs  update.rs
src/forza4/: grid.rs  key.rs  main.rs  preparation.rs
src/game/: keys.rs  mod.rs
src/launcher/: main.rs
src/snake/: config.rs  main.rs  scores.rs
src/snake/game/: keys.rs  mod.rs
