[package]
name = "snake"
version = "0.1.0"
authors = ["Tommaso Thea Cioni <zacktommy1118@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getch = "*"
rand = "*"
"dialoguer" = "0.5.0"
"serde_json" =  "1.0.45"
"serde" = "1.0.104"
"colored" = "1.9.2"
"reqwest" = "0.10.1"