[package]
name = "game_arcade"
version = "0.1.0"
authors = ["Tommaso Thea Cioni <zacktommy1118@gmail.com>"]
edition = "2018"
default-run = "launcher"

[lib]
name = "game_arcade"
path = "src/lib.rs"

[[bin]]
name = "launcher"
path = "src/launcher/main.rs"

[[bin]]
name = "snake"
path = "src/snake/main.rs"

[[bin]]
name = "forza4"
path = "src/forza4/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getch = "*"
rand = "*"
"dialoguer" = "0.5.0"
"serde_json" = "1.0.44"
"serde" = "1.0.104"
"colored" = "1.9.2"
"reqwest" = "0.9.24"
